# impactracer-app

./: .env.template  .gitignore  README.md  analysis_implementation.md  audit_acid_test.py  audit_diagnostic.py  audit_e2e.py  audit_incremental.py  final_audit.py  index_implementation.md  master_blueprint.md  match_analysis.py  pyproject.toml  requirements.txt  run_tests.py
impactracer/: __init__.py  __main__.py  cli.py
impactracer/evaluation/: __init__.py  ablation.py  annotator_tool.py  metrics.py  nfr_verify.py  report_builder.py  schemas.py  statistical.py  variant_flags.py
impactracer/indexer/: __init__.py  auditor.py  code_indexer.py  doc_indexer.py  embedder.py  reranker.py  runner.py  skeletonizer.py  traceability.py
impactracer/persistence/: __init__.py  chroma_client.py  sqlite_client.py
impactracer/pipeline/: __init__.py  context_builder.py  graph_bfs.py  graph_rerank.py  interpreter.py  llm_client.py  prevalidation_filter.py  retriever.py  runner.py  seed_resolver.py  synthesizer.py  traceability_validator.py  traversal_validator.py  validator.py
impactracer/shared/: __init__.py  config.py  constants.py  models.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_analyze_minimal.py  test_analyze_v7.py  test_graph_isolation.py  test_index_end_to_end.py
tests/unit/: test_code_indexer.py  test_context_builder.py  test_crucible.py  test_doc_indexer.py  test_edge_extraction.py  test_embedder.py  test_graph_bfs.py  test_models.py  (+10 more)
tools/: diagnose_k_widening.py  diagnose_pipeline.py  e2e_test.py  reemit_eval_artifacts.py
